// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`client Client with scenarioA should post lead no custom fields 1`] = `
[
  "lead",
  {
    "person_id": 1256,
    "title": "Title lead",
  },
]
`;

exports[`client Client with scenarioA should post lead with custom fields 1`] = `
[
  "lead",
  {
    "6b0f9ad49cea2ddf35760b60aa8ef812f72e4548": [
      202,
      204,
    ],
    "ce00b42565110c896f693a1e3c4a0ac4960c3777": 199,
    "person_id": 1256,
    "title": "Title lead",
  },
]
`;

exports[`client Client with scenarioA should post person with custom fields 1`] = `
[
  "person",
  {
    "e38d2cf0b425791358a30c1a64edccad284a29f4": 2,
    "email": "whatever@whatever.es",
    "ffee954743d1b60f42f025bc99a7351822adcedd": "whatever",
    "name": "Whatever",
  },
]
`;
